--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,17 @@
 @import url(styles/header.css);
+
 :root {
     --cor-principal: #EBECEE;
     --branco: #ffffff;
+    --laranja: #EB9B00;
+    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --fonte-principal : "Poppins", sans-serif;
 }
 
 body {
     background-color: var(--cor-principal);
     color: #ffffff;
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
