--- a/styles/carosel.css
+++ b/styles/carosel.css
@@ -20,3 +20,62 @@
     position: initial;
     margin: .5em 0;
 }
+
+.card__descricao {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0.5em;
+}
+
+.card__botao {
+    display: flex;
+    justify-content: space-between; 
+}
+
+.botoes {
+    display: flex;
+}
+
+.card {
+    background: var(--branco);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    color: black;
+    margin: 1em;
+    padding: 1em;
+}
+
+.descricao__titulo {
+    font-size: 16px;
+    color: var(--laranja);
+    font-weight: 700;
+}
+
+.descricao__titulo-livro {
+    font-size: 18px;
+    font-weight: 700;
+    color: #002F52;
+    margin: 0.5em 0;
+}
+
+.descricao__texto {
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.botoes__itens {
+    margin: 0 0.5em 0;
+}
+
+.botoes__ancora {
+    background-color: var(--laranja);
+    padding: 1em 2.2em;
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+.card__estrela {
+    padding: 0.5em;
+}
